# sifflet-mcp

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: app.py  server.py
src/client/: app.py
src/sifflet_mcp/: __init__.py  server.py
