[project]
name = "sifflet-mcp"
version = "0.1.0"
description = "Basic MCP server for Sifflet"
readme = "README.md"
authors = [
    { name = "Baptiste Azéma", email = "baptiste@siffletdata.com" },
    { name = "Marie Berard", email = "marie@siffletdata.com"},
    { name = "Pierre Courgeon", email = "pierre.courgeon@siffletdata.com"}
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.400",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "sifflet-sdk>=0.3.17"
]

[project.scripts]
sifflet-mcp = "sifflet_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]
