[project]
name = "sifflet-mcp"
version = "0.1.4"
description = "MCP server for interaction with Sifflet data observability platform"
readme = "README.md"
authors = [
    { name = "Baptiste Azéma", email = "baptiste@siffletdata.com" },
    { name = "Marie Berard", email = "marie@siffletdata.com"},
    { name = "Pierre Courgeon", email = "pierre.courgeon@siffletdata.com"}
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.8.1",
    "python-dotenv>=1.1.0",
    "sifflet-sdk>=0.3.22",
]

[project.scripts]
sifflet-mcp = "sifflet_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]
